--- a/gb/22/10/1/n13836588.md
+++ b/gb/22/10/1/n13836588.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共“千人计划”招聘官纽约受审记（4）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13836590-161110-600x400.jpg" />
 <h6>2017年由福州市委率领的福州市海外招才代表团在纽约华埠举行签约授牌仪式。牌子上写：福州市引进海外人才（美国新泽西）联络处。（fssa-gny.com网文截图）
 </h6>
 <hr>
 	<p>【大纪元2022年10月01日讯】（大纪元记者蔡溶纽约报导）中共利用人才招聘活动，“进口”在美国接受教育或在知名公司工作并拥有美国专利和商业秘密知识的人才，作为不透明技术转让的渠道，对美国执法机关和研究机构提出了重大挑战。</p>
-<p>上接：<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/9/30/n13835934.md#1">中共“千人计划”招聘官纽约受审记（3）</a>五十多个美国组织成为外专局伙伴 知名大学为中国代表团做短期定制培训 从中赚钱</p>
-<p><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/9/29/n13835044.md#1">中共“千人计划”招聘官纽约受审记（2）</a><br />
+<p>上接：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/9/30/n13835934.md#1">中共“千人计划”招聘官纽约受审记（3）</a>五十多个美国组织成为外专局伙伴 知名大学为中国代表团做短期定制培训 从中赚钱</p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/9/29/n13835044.md#1">中共“千人计划”招聘官纽约受审记（2）</a><br />
 美国国务院要求签宣誓书 大学搞在线培训及测试 都无法约束中共人员造假欺骗美国</p>
-<p><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/9/24/n13831743.md#1">替千人计划招人 中共高官纽约受审记（1）</a><br />
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/9/24/n13831743.md#1">替千人计划招人 中共高官纽约受审记（1）</a><br />
 自川普就职 中共“人才物色”官员日子难过 副手难拿美签</p>
 <p>上集讲到周安澜（Alex Joske）被聘为专家从澳大利亚远道而来，告诉纽约陪审团他在互联网上查到的有关外专局和CAIEP在美国的工作及其在美国的培训合作伙伴的情况，例如哈佛大学、杜克大学、马里兰大学、佐治亚大学、罗格斯大学等培训合作伙伴，每个学校都有教职员工负责维护与中共外专局的关系。</p>
 <h2>11：全球至少600个人才招聘站</h2>
-<figure id="attachment_13836589" aria-describedby="caption-attachment-13836589" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13836589-161060-e1664600982571.png"><img class="size-medium wp-image-13836589" src="https://i.epochtimes.com/assets/uploads/2022/10/id13836589-161060-450x279.png" alt="" width="450" b="279" /></a><figcaption id="caption-attachment-13836589" class="wp-caption-text">澳大利亚战略政策研究所（ASPI）国际网络政策中心2020年8月20日发表标题为《引凤：中国共产党的全球技术和人才搜索》（Hunting the Phoenix The Chinese: Communist Party&#8217;s global search for technology and talent）的报告，作者为周安澜（Alex Joske）。图为报告封面截图。（aspi.org.au/index.php/report/hunting-phoenix）</figcaption></figure>
+<figure id="attachment_13836589" aria-describedby="caption-attachment-13836589" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/10/id13836589-161060-e1664600982571.png"><img decoding="async" class="size-medium wp-image-13836589" src="https://i.epochtimes.com/assets/uploads/2022/10/id13836589-161060-450x279.png" alt="" width="450" b="279" /></a><figcaption id="caption-attachment-13836589" class="wp-caption-text">澳大利亚战略政策研究所（ASPI）国际网络政策中心2020年8月20日发表标题为《引凤：中国共产党的全球技术和人才搜索》（Hunting the Phoenix The Chinese: Communist Party&#8217;s global search for technology and talent）的报告，作者为周安澜（Alex Joske）。图为报告封面截图。（aspi.org.au/index.php/report/hunting-phoenix）</figcaption></figure>
 <p>周安澜说，CAIEP在美国主要与科学和专业协会合作，通过这些关系推进其人才招聘工作，促进中共政府的人才招聘计划，并与这些人建立网络和关系。</p>
 <p>《大纪元》记者查阅，周安澜曾于2020年8月发表题为《引凤：中国共产党的全球技术和人才搜索》（Hunting the Pheonix）的报告显示，中共的全球人才招募计划在世界各地设立了至少600个招聘站，招聘网络的复杂程度远远超出西方国家此前的估计。</p>
 <p>这份由美国国务院部分出资的“引凤”调查报告说，招聘站每引荐成功一名海外人才，即可以从中共中央或地方的政府部门获得高达20万元人民币的酬劳，并获得每年15万元人民币的活动经费（相当于每月1,700美元活动经费）。</p>
-<p>从<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%B3%E5%BF%A0%E4%B8%89.md#1">柳忠三</a>的案例看，2018年纽约CAIEP总共花费12万美元，平均每月1万元，包括梁晓的月薪2,000美元。梁晓2019年5月向总部报告说，“工资占了很大一部分。它包括两名全职雇员的工资，我们自己的人、也包括其他人的工资，那些由我们雇用的人（的开支）。今年的差旅费支出肯定会高一点，今年我们需要大量的旅行。”</p>
+<p>从柳忠三的案例看，2018年纽约CAIEP总共花费12万美元，平均每月1万元，包括梁晓的月薪2,000美元。梁晓2019年5月向总部报告说，“工资占了很大一部分。它包括两名全职雇员的工资，我们自己的人、也包括其他人的工资，那些由我们雇用的人（的开支）。今年的差旅费支出肯定会高一点，今年我们需要大量的旅行。”</p>
 <p>周安澜在“引凤”报告中提到，中国在2006年或更早开始设立海外人才招聘站，仅在2018年就成立了115个人才站，美国的数量最多，在2020年有146个。</p>
 <p>这些招聘站通常由外国当地组织经营，与中方签订若干年的合同，模板合同包括保密条款。这些合作的海外地方团体包括同乡会、商业和专业组织、校友会、中国学生和学者协会（CSSA）等，其中有的是由外专局和中共统战部等机构的支持建立的，中共军方使用同样的网络招聘海外人才。</p>
 <p>报告举例说，被美国特斯拉公司（Tesla Inc.）2019年3月起诉的前华裔员工曹光植，就曾经在2009年与三名友人在美国成立了“全美温州博士协会”。该协会从一开始就与中共政府密切合作。温州当地报纸的一篇报导称，温州科技局、侨办和侨联向协会提供了一份温州籍的美国博士和毕业生名单，然后他们按名单招募这些人入会。</p>
 <p>这显示，背后支持这一切的是国内庞大的中共情报官僚机构，跟踪海外的许多中国人，建立数据库，了解他们可以或应该试图为中共攫取什么。</p>
 <p>成立一年后，该协会与温州统战部门签署合作协议，为后者在美国招募人才。报告说，这个协会成立几年就吸纳了一百多名“精英”成员，其中包括国际货币基金组织前秘书长林建海，谷歌、亚马逊、IBM、摩托罗拉等公司的多名工程师、哈佛和耶鲁大学学者以及六名美国政府雇员。</p>
-<p>报告说，该协会至少有一名成员加入了浙江省的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%83%E4%BA%BA%E8%AE%A1%E5%88%92.md#1">千人计划</a>，还帮助温州大学招募了美国能源部阿贡国家实验室的一名材料科学家。</p>
+<p>报告说，该协会至少有一名成员加入了浙江省的千人计划，还帮助温州大学招募了美国能源部阿贡国家实验室的一名材料科学家。</p>
 <p>在最令人震惊的情况下，通过外国人才计划招募来的人后来从事外国军事项目。“引凤”报告说，军民融合政策导致中国大学建立了逾160个国防实验室，许多招聘来的海外人才最终在国防实验室或国防项目中工作。</p>
 <h2>12：纽约的人才招聘站</h2>
 <p>根据周安澜在报告中提供的线索，《大纪元》记者发现，2015年成立的“大纽约地区福建学生学者联谊会”（FSSAGNY），工作内容之一就是“建立本地区福建籍人才库，为福建家乡推荐海外高端人才”，其主要支持机构是纽约中领馆。</p>
@@ -32,7 +32,7 @@
 <p>再例如2018年，他们又接待了厦门招聘代表团，陪同厦门大学校长访问哥伦比亚大学，陪同厦门代表团参观普林斯顿大学康毅滨癌症研究实验室等，协助厦门“双百计划人才”的招聘活动。</p>
 <p>FSSAGNY网站报导，2017年由福州市委率领的福州市海外招才代表团在纽约华埠举行签约授牌仪式。报导称，福州市委当年在海外一共设了五个引进人才招聘站，“并将按规定签订合作协议、授牌和给予工作经费支持”。</p>
 <h2>13：柳：我只是听命行事 检方：必须重判</h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9F%B3%E5%BF%A0%E4%B8%89.md#1">柳忠三</a>被陪审团裁决定罪后，仍然坚持认为他的犯罪行为既轻微又合理，以及他只是按照上级指示行事。他的代表律师韦德尔（Justin Weddle）辩称，柳只是去询问大学能否接受孙，并未实际申请签证。此外他只是访问一些美国机构，例如讨论与中国医院合作进一步培养人才的愿望，没有证据表明他在CAIEP的工作是非法的，他被控的阴谋罪很“有限”，他本人也没有从中获利。</p>
+<p>柳忠三被陪审团裁决定罪后，仍然坚持认为他的犯罪行为既轻微又合理，以及他只是按照上级指示行事。他的代表律师韦德尔（Justin Weddle）辩称，柳只是去询问大学能否接受孙，并未实际申请签证。此外他只是访问一些美国机构，例如讨论与中国医院合作进一步培养人才的愿望，没有证据表明他在CAIEP的工作是非法的，他被控的阴谋罪很“有限”，他本人也没有从中获利。</p>
 <p>他的律师声称，柳忠三只是为了促进中美两国关系，为双方谋取利益，他的工作重点是对中国游客到美国参加短期培训的代表团进行监督和管理，以及维护与外专局认可的培训合作伙伴——美国著名大学的关系上，这些大学在美国接待中共政府代表团并获取巨额利润。</p>
 <p>女检控官格罗斯曼（Gillian Grossman）反驳说，这是一个严重的罪行，柳与中共政府协调一致，寻求系统破坏美国签证规定以及美国管理、监控访问学者活动的能力。他以牺牲美国及其机构为代价，来保证CAIEP在美国开展业务。</p>
 <p>她指出，看来柳忠三只是苦恼自己被抓住，他没有真正的悔恨，也不想对自己的行为负责，一个劲地将自己的罪行“最小化”。实际他对计划的成功发挥了关键作用，包括监督和指导同谋的行为，以促进自己和中共政府那些人的利益，他从头到尾都知道这是违法行为。该案不是孤例，这只是柳和中共政府用来逃避美国政府签证规定的长期犯罪剧本中的最新例子。需要重判他，才能说明美国受到的伤害。</p>
@@ -44,52 +44,43 @@
 <p>说到被CAIEP同事耻笑“胆小”的崔龙飞，卡普罗尼法官说，“崔龙飞看起来明白美国法律对他的限制，不管外专局的反应如何，他试图遵守美国法律。柳先生，你没有那样做，你积极地违反美国法律，因为与遵守美国的法律相比，你更愿意满足上级的需要。”</p>
 <p>“我们欢迎外国人来美国，以我们的生活规则建立一切，我不认为这个要求很高。所以一般的威慑很重要，那些像你这种角色来到这个国家的人，必须明白这一点，他们必须遵守规则，即使这个规则让你的生活有点困难。”</p>
 <p>根据量刑指南，该案（签证欺诈罪名）适用的量刑范围是8至14个月监禁。柳忠三的辩方律师要求不入狱，卡普罗尼法官最后判柳忠三服刑10个月，刑满后直接驱逐出境。</p>
-<h2>15：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%83%E4%BA%BA%E8%AE%A1%E5%88%92.md#1">千人计划</a>转入地下</h2>
+<h2>15：千人计划转入地下</h2>
 <p>2017年底，柳忠三在向中共“外专局”提交的年度叙职报告中，夸耀他已从美国“顶级大学”、“院士”和“千人计划专家”中招揽多名专家、教授和学生，到中国负责项目，并建议将其中一间美国大学指定为中共“外国专家局的培训机构”。此外，他定期与中共驻美大使馆、中共驻纽约领馆及外专局的官员协调。</p>
 <p>不过这些行为并未成为入罪的依据，检控官对柳忠三案的指控重点仅仅是他“阴谋签证欺诈”。现实是，美国目前对这种处于灰色地带的人才招聘／科技转移是否会被归为“经济间谍”的非法行为还很难确定。从目前公开的指控看，大多数案件都指控违规的科学家把在美国政府赞助下的研究用于在中国建立“影子实验室”，没有披露接受中国资助等问题。</p>
 <p>但自从美国司法部2018年开启“中国行动计划”，其中特别强调对实验室研究人员、高校等“非传统情报采集者”的调查后，中共开始将所有关于“千人计划”的词条从中文网站上删除，并命令各机构采用更隐蔽的招聘方式。“千人计划”从此转入地下。</p>
 <p>虽然司法部今年2月撤销了“中国行动计划”，但近年美国对于中共技术盗窃的做法，已有了更清楚的认知。美国司法部2019年9月宣布逮捕柳忠三时说，“我们欢迎包括来自中国的外国学生和研究人员，但我们不欢迎签证欺诈行为，尤其是代表某个政权（进行欺诈）。”◇</p>
 <p>责任编辑：李悦#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/23/n11541932.md#1">柳忠三被美国起诉 揭开千人计划今与昔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/17/n13444375.md#1">哈佛教授案续审 电邮披露其被中共纳入千人计划</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/21/n13451540.md#1">哈佛教授案 检察官称利伯隐瞒参与千人计划</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/21/n13451732.md#1">哈佛教授涉千人计划案 陪审团判利伯六罪成立</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/23/n11541932.md#1">柳忠三被美国起诉 揭开千人计划今与昔</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/17/n13444375.md#1">哈佛教授案续审 电邮披露其被中共纳入千人计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/21/n13451540.md#1">哈佛教授案 检察官称利伯隐瞒参与千人计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/21/n13451732.md#1">哈佛教授涉千人计划案 陪审团判利伯六罪成立</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/18/n10492678.md#1" target="_blank">仰岳：共产党如何干扰美国的对华政策</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/26/n9773019.md#1" target="_blank">古拉格历史博物馆 揭露斯大林红色恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018137.md#1">斯里兰卡男童转生佛教家庭 知前世为基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017550.md#1">美国民众目击报告：F-16战机与UFO缠斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014437.md#1">古代不贺夏至  节俗中蕴含什么深机？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014582.md#1">刘备占蜀地是天意 孙权身边异士透天机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013202.md#1">端午节九大风俗 内涵与历史渊源知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020856.md#1">【全球新闻】普京：即将部署洲际核导弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020883.md#1">【有冇搞错】中共逼近 美国的新“古巴危机”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021037.md#1">【探索时分】乌攻克皮亚提卡基 俄出动自爆坦克</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020038.md#1">二十大前受狙击 陈敏尔失势被指受大秘牵连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020509.md#1">美中关系再起波澜 “独裁者”称号惹急战狼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019964.md#1">【翻墙必看】李强出访半途 已发生不少异象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019849.md#1">佟大为常年吃水煮菜显老态 被关悦管太严惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019410.md#1">尊重女性 基努李维拍照伸“绅士手”获赞誉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019049.md#1">给孩子做了表率 布鲁斯威利父亲节收满满祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019911.md#1">唐嫣谈夫妻相处模式：因拍戏分居格外珍惜相聚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020832.md#1">谣传假视障 萧煌奇摘墨镜自清：愿世人保持良善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020205.md#1">如何赶走苍蝇？ 专家分享省钱的天然方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019279.md#1">老中医：50岁以上如何预防心血管病和骨质疏松</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019213.md#1">抽筋是因为缺钙？这5个症状可能是缺镁 5类食物补镁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019719.md#1">生酮饮食饿死癌细胞但有副作用 专家：1方法能翻转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006090.md#1">缺它全身都出问题 维生素D抗癌防失智这样补才有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/1/n13836588.htm">中共“千人计划”招聘官纽约受审记（4）</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/1/n13836588.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/1/n13836588.htm">中共“千人计划”招聘官纽约受审记（4）</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/1/n13836588.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
